--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -100,7 +100,7 @@ Individual post-class exercises demonstrating your engagement with the course co
 
 ### Project
 
-In initially random assigned groups (up to 6 members and no less than 5 members), students must submit a team's project report presentation on Brightspace, showcasing a practical application of the learned concepts. A guideline document will be shared by the instructor after before lesson 10. 
+In groups up to 6 members (no less than 5 members), students must submit a team's project report presentation on Brightspace, showcasing a practical application of the learned concepts. A guideline document will be shared by the instructor after Lesson 10. 
 
 ### Virtual Final Exam
 
