--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -80,16 +80,16 @@ The final grade will not hinge on a mere point count or percentage. Per the Scho
 
 | **Assignment**             | **Percentage** |
 |----------------------------|:--------------:|
-| Attendance                 |      7%       |
+| Attendance and Participation |      7%       |
 | Quizzes.                   |      18%       |
 | Exercises                  |      25%       |
 | Project                    |      25%       |
 | Virtual Final Exam         |      25%       |
 
 
-### Attendance
+### Attendance and Participation
 
-Attend your classes, pay attention and participate. If you do not attend class, you will likely not succeed. According to the University regulations, “Scheduled courses allow students to avoid conflicts and reflect the University’s expectation that students should be present for every meeting of a class/laboratory for which they are registered.” The instructor will take random attendance and keep the attendance record. Your attendance grade will be based on this record.
+Attend your classes, pay attention and participate. If you do not attend class, you will likely not succeed. According to the University regulations, “Scheduled courses allow students to avoid conflicts and reflect the University’s expectation that students should be present for every meeting of a class/laboratory for which they are registered.” The instructor will take random attendance and keep the attendance record based on participatory activities. Your attendance/participation grade will be based on this record.
 
 ### Quizzes
 
