lesson 2 slides update announcement

--- a/lecture_slides/02_lesson_m3dm/02_lesson_m3dm.qmd
+++ b/lecture_slides/02_lesson_m3dm/02_lesson_m3dm.qmd
@@ -51,6 +51,16 @@ format:
 
 <br>
 
+- **No class on September 2nd**.
+
+- **Grading Schedule**: I plan to grade your submissions every Monday after our class.
+
+- **Attendance and Participation**: All Attendance and Participation assignments will be equally weighted at the end of the semester.
+
+## Announcements 
+
+<br>
+
 ::: nonincremental
 
 ::: columns
