--- a/lecture_slides/02_lesson_m3dm/02_lesson_m3dm.qmd
+++ b/lecture_slides/02_lesson_m3dm/02_lesson_m3dm.qmd
@@ -51,7 +51,7 @@ format:
 
 <br>
 
-- **No class on September 2nd**.
+- **No class on September 2nd, Monday**.
 
 - **Grading Schedule**: I plan to grade your submissions every Monday after our class.
 
