lesson 4 script online

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -28,7 +28,7 @@ editor: visual
 | **8/19/24**  | Lesson 1: Technical Enablers of Modern Data-Driven Decision Making                      | Quiz #1<br>Exercise #1 | [slides](/lecture_slides/01_lesson_m3dm/01_lesson_m3dm.html){target="_blank"} | - [**Video**: The NBA Data Scientist](https://www.youtube.com/watch?v=MpLHMKTolVw&list=PLkIselvEzpM5nFf4nu--q2OGccA_0alYO){target="_blank"}<br>- [**Video**: Hans Rosling's 200 Countries, 200 Years](https://www.youtube.com/watch?v=jbkSRLYSojo&list=PLkIselvEzpM5nFf4nu--q2OGccA_0alYO&index=1){target="_blank"}  |
 | **8/26/24**  | Lesson 2: Data Organization for Using Data to Drive Decisions                           | Quiz #2<br>Exercise #2 | [slides](/lecture_slides/02_lesson_m3dm/02_lesson_m3dm.html){target="_blank"} | - [**Video**: Relational vs. Non-Relational Databases](https://www.youtube.com/watch?v=E9AgJnsEvG4){target="_blank"}                            |
 | **9/2/24**   | No class* - Labor Day - Lesson 3: Tools for Using Data to Drive Decisions               | Quiz #3<br>Exercise #3                                   |            |                             |
-| **9/9/24**   | Lesson 4: Introduction to R and RStudio                                                 | Quiz #4<br>Exercise #4   | [slides](/lecture_slides/04_lesson_m3dm/04_lesson_m3dm.html){target="_blank"} | - [**Video**: RStudio is now Posit!](https://www.youtube.com/watch?v=0_UNtwEh7kY){target="_blank"}                            |
+| **9/9/24**   | Lesson 4: Introduction to R and RStudio                                                 | Quiz #4<br>Exercise #4   | [slides](/lecture_slides/04_lesson_m3dm/04_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/04_lesson_m3dm/04_lesson_m3dm.R){target="_blank"} | - [**Video**: RStudio is now Posit!](https://www.youtube.com/watch?v=0_UNtwEh7kY){target="_blank"}                            |
 | **9/16/24**  | Lesson 5: Installing Packages and Importing Data in R                                   | Quiz #5<br>Exercise #5                                   |            |                             |
 | **9/23/24**  | Lesson 6: Data Types and Viewing Data Types in R                                        | Quiz #6<br>Exercise #6                                   |            |                             |
 | **9/30/24**  | Lesson 7: Key Steps of Performing Data Mining in R                                      | Quiz #7<br>Exercise #7                                   |            |                             |
