--- a/lecture_slides/06_lesson_m3dm/06_lesson_m3dm.qmd
+++ b/lecture_slides/06_lesson_m3dm/06_lesson_m3dm.qmd
@@ -26,40 +26,44 @@ format:
 ::: nonincremental
 ::: columns
 ::: {.column width="50%" style="text-align: center; justify-content: center; align-items: center;"}
-- XXX
-    - XXX
-    - XXX
-- XXX
-    - XXX
+-   Lesson 04 and Lesson 05 Exercises Review
+-   Data Types
+-   Viewing Data Types in `R`
+-   Redefining Data Types in `R`
+-   Data Types and Their Impact
 :::
 
 ::: {.column width="50%" style="text-align: center; justify-content: center; align-items: center;"}
-- XXX
-    -   XXX
-    -   XXX
 :::
 :::
 :::
 
-# Data Types {background-color="#cfb991"}
+# Lesson 04 Exercises Review {background-color="#cfb991"}
+
+# Lesson 05 Exercises Review {background-color="#cfb991"}
+
+# Data Types
 
 ## Introduction to Data Types
 
 Data can take various forms, and identifying the correct data type is essential for analysis. In this course, we focus on:
 
-- **Numerical data** (e.g., age, temperature)
-- **Categorical data** (e.g., gender, color)
-- **Ordinal data** (e.g., academic performance levels)
-- **Text data** (e.g., essays, speeches)
-- **Date and time data** (e.g., 1/1/2023)
+-   **Numerical data** (e.g., age, temperature)
+-   **Logical data** (e.g., TRUE, FALSE)
+-   **Categorical data** (e.g., gender, color)
+-   **Ordinal data** (e.g., academic performance levels)
+-   **Text data** (e.g., essays, speeches)
+-   **Date and time data** (e.g., 1/1/2023)
 
 ## Importance of Data Types in `R`
 
 Data types are critical for:
 
-- Correct interpretation during analysis
-- Efficient memory usage and performance
-- Avoiding erroneous calculations (e.g., treating categorical data as numeric)
+-   Correct interpretation during analysis
+-   Efficient memory usage and performance
+-   Avoiding erroneous calculations (e.g., treating categorical data as numeric)
+
+## Excel Example
 
 # Viewing Data Types in `R` {background-color="#cfb991"}
 
@@ -67,11 +71,10 @@ Data types are critical for:
 
 To inspect the data types in an `R` dataframe:
 
-- **class()**: View the type of a single variable
-- **str()**: Get a concise summary of the dataframe, including the data type of each variable
+-   **class()**: View the type of a single variable
+-   **str()**: Get a concise summary of the dataframe, including the data type of each variable
 
-::: {.fragment}
-
+::: fragment
 ```{r eval=FALSE, echo=TRUE}
 # View the type of a single variable
 class(mtcars$gear)
@@ -79,7 +82,6 @@ class(mtcars$gear)
 # View the structure and data types of the entire dataframe
 str(mtcars)
 ```
-
 :::
 
 # Redefining Data Types in `R` {background-color="#cfb991"}
@@ -101,11 +103,9 @@ str(mtcars)
 
 The `mtcars` dataset includes variables that could be redefined as categorical. For instance:
 
-- `vs` and `am` are numeric by default but represent categorical data.
+-   `vs` and `am` are numeric by default but represent categorical data.
 
-
-::: {.fragment}
-
+::: fragment
 By redefining them as factors, we avoid incorrect numeric operations.
 
 ```{r eval=FALSE, echo=TRUE}
@@ -113,31 +113,28 @@ By redefining them as factors, we avoid incorrect numeric operations.
 mtcars$vs <- as.factor(mtcars$vs)
 mtcars$am <- as.factor(mtcars$am)
 ```
-
 :::
 
 ## Data Types and Their Impact
 
 Choosing the correct data type impacts:
 
-- **Performance**: Using integers vs floats
+-   **Performance**: Using integers vs floats
 
-- **Memory Usage**: Numerical types consume more memory
+-   **Memory Usage**: Numerical types consume more memory
 
-- **Analysis**: Properly defined categorical variables ensure meaningful grouping and sorting.
+-   **Analysis**: Properly defined categorical variables ensure meaningful grouping and sorting.
 
 # Summary {background-color="#cfb991"}
 
 ## Summary
 
 ::: nonincremental
+-   `R` supports various data types: numerical, categorical, text, date/time, etc.
 
-- `R` supports various data types: numerical, categorical, text, date/time, etc.
+-   Use `class()` and `str()` to inspect data types in a dataframe.
 
-- Use `class()` and `str()` to inspect data types in a dataframe.
-
-- Correctly define or redefine data types using `as.numeric()`, `as.factor()`, and other functions for accurate analysis.
-
+-   Correctly define or redefine data types using `as.numeric()`, `as.character()`, `as.factor()`, and other functions for accurate analysis.
 :::
 
 # Thank you! {background-color="#cfb991"}
