lesson 07 slides and material

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -31,7 +31,7 @@ editor: visual
 | **9/9/24**   | Lesson 4: Introduction to R and RStudio                                    | Quiz #4<br>Exercise #4                    | [slides](/lecture_slides/04_lesson_m3dm/04_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/04_lesson_m3dm/04_lesson_m3dm.R){target="_blank"}                                                                     | \- [**Video**: RStudio is now Posit!](https://www.youtube.com/watch?v=0_UNtwEh7kY){target="_blank"}                                                                                                                                                                                                                                                                          |
 | **9/16/24**  | Lesson 5: Installing Packages and Importing Data in R                      | Quiz #5<br>Exercise #5                    | [slides](/lecture_slides/05_lesson_m3dm/05_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/05_lesson_m3dm/05_lesson_m3dm.R){target="_blank"}<br>[data](/lecture_slides/05_lesson_m3dm/data.zip){target="_blank"} | \- [**Video**: It's a Great Time to be an R Package Developer!](https://www.youtube.com/watch?v=hfqjyeA_z7s){target="_blank"}<br>- [Blog: Quick list of useful R packages](https://support.posit.co/hc/en-us/articles/201057987-Quick-list-of-useful-R-packages){target="_blank"}<br>- [Posit R packages](https://posit.co/products/open-source/rpackages/){target="_blank"} |
 | **9/23/24**  | Lesson 6: Data Types and Viewing Data Types in R                           | Quiz #6<br>Exercise #6                    | [slides](/lecture_slides/06_lesson_m3dm/06_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/06_lesson_m3dm/06_lesson_m3dm.R){target="_blank"}<br>[data](/lecture_slides/06_lesson_m3dm/data.zip){target="_blank"}                 | - [R Data Types](https://www.w3schools.com/r/r_data_types.asp){target="_blank"}<br>- [Dates with Lubridate](https://lubridate.tidyverse.org/){target="_blank"}<br>- [Categorical Data](https://sscc.wisc.edu/sscc/pubs/dwr/categorical.html#cheat-sheet){target="_blank"} |
-| **9/30/24**  | Lesson 7: Key Steps of Performing Data Mining in R                         | Quiz #7<br>Exercise #7                    | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
+| **9/30/24**  | Lesson 7: Key Steps of Performing Data Mining in R                         | Quiz #7<br>Exercise #7      | [slides](/lecture_slides/07_lesson_m3dm/07_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/07_lesson_m3dm/07_lesson_m3dm.R){target="_blank"} |  - [Blog: Data Mining in R](https://www.geeksforgeeks.org/data-mining-in-r/){target="_blank"}<br> - [Blog: Data Mining with R](https://rpubs.com/uriel623/670548){target="_blank"} |
 | **10/7/24**  | No class\* - Fall Break - Lesson 8: Most Applied Data Mining Techniques    | Quiz #8<br>Exercise #8                    | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
 | **10/14/24** | Lesson 9: Exploratory Data Analysis in R: Summary Statistics               | Quiz #9<br>Exercise #9                    | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
 | **10/21/24** | Lesson 10: Exploratory Data Analysis in R: Visualization and Dashboarding  | Quiz #10<br>Exercise #10                  | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
