--- a/schedule.qmd
+++ b/schedule.qmd
@@ -33,7 +33,7 @@ editor: visual
 | **9/23/24**  | Lesson 6: Data Types and Viewing Data Types in R                           | Quiz #6<br>Exercise #6                    | [slides](/lecture_slides/06_lesson_m3dm/06_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/06_lesson_m3dm/06_lesson_m3dm.R){target="_blank"}<br>[data](/lecture_slides/06_lesson_m3dm/data.zip){target="_blank"}                 | - [R Data Types](https://www.w3schools.com/r/r_data_types.asp){target="_blank"}<br>- [Dates with Lubridate](https://lubridate.tidyverse.org/){target="_blank"}<br>- [Categorical Data](https://sscc.wisc.edu/sscc/pubs/dwr/categorical.html#cheat-sheet){target="_blank"} |
 | **9/30/24**  | Lesson 7: Key Steps of Performing Data Mining in R                         | Quiz #7<br>Exercise #7      | [slides](/lecture_slides/07_lesson_m3dm/07_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/07_lesson_m3dm/07_lesson_m3dm.R){target="_blank"} |  - [Blog: Data Mining in R](https://www.geeksforgeeks.org/data-mining-in-r/){target="_blank"}<br> - [Blog: Data Mining with R](https://rpubs.com/uriel623/670548){target="_blank"} |
 | **10/7/24**  | No class\* - Fall Break - Lesson 8: Most Applied Data Mining Techniques    | Quiz #8<br>Exercise #8                    | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
-| **10/14/24** | Lesson 9: Exploratory Data Analysis in R: Summary Statistics               | Quiz #9<br>Exercise #9                    | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
+| **10/14/24** | Lesson 9: Exploratory Data Analysis in R: Summary Statistics               | Quiz #9<br>Exercise #9                    | [slides](/lecture_slides/09_lesson_m3dm/09_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/09_lesson_m3dm/09_lesson_m3dm.R){target="_blank"} |  - [R4DS: Exploratory Data Analysis](https://r4ds.hadley.nz/eda){target="_blank"}<br> - [IBM: What is Exploratory Data Analysis?](https://www.ibm.com/topics/exploratory-data-analysis){target="_blank"} |
 | **10/21/24** | Lesson 10: Exploratory Data Analysis in R: Visualization and Dashboarding  | Quiz #10<br>Exercise #10                  | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
 | **10/28/24** | Lesson 11: Mine Data through Predictive Modeling in R                      | Quiz #11<br>Exercise #11                  | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
 | **11/4/24**  | Lesson 12: Identifying Significant Predictors                              | Quiz #12<br>Exercise #12                  | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
