--- a/schedule.qmd
+++ b/schedule.qmd
@@ -35,7 +35,7 @@ editor: visual
 | **10/7/24**  | No class\* - Fall Break - Lesson 8: Most Applied Data Mining Techniques    | Quiz #8<br>Exercise #8                    | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
 | **10/14/24** | Lesson 9: Exploratory Data Analysis in R: Summary Statistics               | Quiz #9<br>Exercise #9                    | [slides](/lecture_slides/09_lesson_m3dm/09_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/09_lesson_m3dm/09_lesson_m3dm.R){target="_blank"} |  - [R4DS: Exploratory Data Analysis](https://r4ds.hadley.nz/eda){target="_blank"}<br> - [IBM: What is Exploratory Data Analysis?](https://www.ibm.com/topics/exploratory-data-analysis){target="_blank"} |
 | **10/21/24** | Lesson 10: Exploratory Data Analysis in R: Visualization and Dashboarding  | Quiz #10<br>Exercise #10                  | [slides](/lecture_slides/10_lesson_m3dm/10_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/10_lesson_m3dm/10_lesson_m3dm.R){target="_blank"} | - [R4DS: Visualize](https://r4ds.hadley.nz/visualize){target="_blank"}<br> - [Hadley Wickham's Lecture](http://stat405.had.co.nz/lectures/20-effective-vis.pdf){target="_blank"}<br> - [r-graph-gallery](https://www.r-graph-gallery.com/){target="_blank"}<br> - [ggplot flipbook](https://evamaerey.github.io/ggplot_flipbook/ggplot_flipbook_xaringan.html#1){target="_blank"}<br> - [Gallery](http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html){target="_blank"}<br> - [Edward Tufte](https://www.edwardtufte.com/tufte/){target="_blank"}  |
-| **10/28/24** | Lesson 11: Mine Data through Predictive Modeling in R                      | Quiz #11<br>Exercise #11                  | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
+| **10/28/24** | Lesson 11: Mine Data through Predictive Modeling in R                      | Quiz #11<br>Exercise #11                  | [slides](/lecture_slides/11_lesson_m3dm/11_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/11_lesson_m3dm/11_lesson_m3dm.R){target="_blank"} | - [**Video**: Line Fitting, Residuals, and Correlation](https://www.youtube.com/watch?v=mPvtZhdPBhQ&list=PLkIselvEzpM63ikRfN41DNIhSgzboELOM){target="_blank"}<br> - [**Video**: Fitting a Line with Least Squares Regression](https://www.youtube.com/watch?v=z8DmwG2G4Qc&list=PLkIselvEzpM63ikRfN41DNIhSgzboELOM){target="_blank"}<br> - [**Video**: Least Squares Regression](https://www.youtube.com/watch?v=yqf0L_WEaW0&list=PLkIselvEzpM63ikRfN41DNIhSgzboELOM){target="_blank"}<br> - [**Video**: Types of Outliers in Linear Regression](https://www.youtube.com/watch?v=jZEKAlo1E54&list=PLkIselvEzpM63ikRfN41DNIhSgzboELOM){target="_blank"}<br> - [**Video**: Inference for Linear Regression](https://www.youtube.com/watch?v=depiT-hTaGA&list=PLkIselvEzpM63ikRfN41DNIhSgzboELOM){target="_blank"}<br> -[IMS: Linear regression with a single predictor](https://openintro-ims.netlify.app/model-slr){target="_blank"}<br> -[IMS: Inference for linear regression with a single predictor](https://openintro-ims.netlify.app/inf-model-slr){target="_blank"}<br>- [**Video**: Introduction to Multiple Regression](https://www.youtube.com/watch?v=sQpAuyfEYZg&list=PLkIselvEzpM5f1HYzIjFt52SD4izsJ2_I){target="_blank"}<br>- [**Video**: Model Selection in Multiple Regression](https://www.youtube.com/watch?v=VB1qSwoF-l0&list=PLkIselvEzpM5f1HYzIjFt52SD4izsJ2_I){target="_blank"}<br>- [**Video**: Checking Multiple Regression Diagnostics Using Graphs](https://www.youtube.com/watch?v=3KSUeYMKt5A&list=PLkIselvEzpM5f1HYzIjFt52SD4izsJ2_I){target="_blank"}<br>-[IMS: Linear regression with multiple predictors](https://openintro-ims.netlify.app/model-mlr){target="_blank"}<br>-[IMS: Inference for linear regression with multiple predictors](https://openintro-ims.netlify.app/inf-model-mlr){target="_blank"} |
 | **11/4/24**  | Lesson 12: Identifying Significant Predictors                              | Quiz #12<br>Exercise #12                  | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
 | **11/11/24** | Lesson 13: Predictive Model Interpretations and Predictions                | Quiz #13<br>Exercise #13                  | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
 | **11/18/24** | Lesson 14: Evaluating Predictive Model Performance                         | Quiz #14<br>Exercise #14                  | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
