--- a/schedule.qmd
+++ b/schedule.qmd
@@ -39,7 +39,7 @@ editor: visual
 | **11/4/24**  | Lesson 12: Identifying Significant Predictors                              | Quiz #12<br>Exercise #12                  | [slides](/lecture_slides/12_lesson_m3dm/12_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/12_lesson_m3dm/12_lesson_m3dm.R){target="_blank"} | - [**`R` Package**: Variable Selection Methods](https://cran.r-project.org/web/packages/olsrr/vignettes/variable_selection.html){target="_blank"}<br> - [IMS: Model Selection](https://openintro-ims.netlify.app/model-mlr.html#sec-model-selection){target="_blank"}  |
 | **11/11/24** | Lesson 13: Predictive Model Interpretations and Predictions                | Quiz #13<br>Exercise #13                  | [slides](/lecture_slides/13_lesson_m3dm/13_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/13_lesson_m3dm/13_lesson_m3dm.R){target="_blank"}                                                                                                                                                                                                                                | - [IMS: Inference for linear regression with multiple predictors](https://openintro-ims.netlify.app/inf-model-mlr.html){target="_blank"}<br> - [IMS: Applications: Model and infer](https://openintro-ims.netlify.app/inf-model-applications){target="_blank"}                                                                                                                                                                                                                                                                                                                                                                             |
 | **11/18/24** | Lesson 14: Evaluating Predictive Model Performance                         | Quiz #14<br>Exercise #14                  | [slides](/lecture_slides/14_lesson_m3dm/14_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/14_lesson_m3dm/14_lesson_m3dm.R){target="_blank"}                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
-| **11/25/24** | Lesson 15: Bringing It All Together: From Data to Insights to Decisions    | Quiz #15<br>Exercise #15                  | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
+| **11/25/24** | Lesson 15: Bringing It All Together: From Data to Insights to Decisions    | Quiz #15<br>Exercise #15                  | [slides](/lecture_slides/15_lesson_m3dm/15_lesson_m3dm.html){target="_blank"}<br>[script](/lecture_slides/15_lesson_m3dm/15_lesson_m3dm.R){target="_blank"}                                                                                                                                                                                                                                                                                                  | - [**Video**: Quarto Dashboards 1: Hello, Dashboards!](https://www.youtube.com/watch?v=HW7QbqI4fH0&list=PL9HYL-VRX0oTCvag75m8yDjFoJvE-gMxp){target="_blank"}<br> - [**Video**: Shiny New Things Using R Bridge the Gap in Electronic Medical Record Reporting](https://posit.co/resources/videos/shiny-new-things-using-r-bridge-the-gap-in-electronic-medical-record-reporting/){target="_blank"}<br>                                                                                                                                                                                                                                                                                                                                                                             |
 | **12/2/24**  | Project presentation and report due                                        | **Project presentation submission**       | .                                                                                                                                                                                                                               | .                                                                                                                                                                                                                                                                                                                                                                            |
 | **12/9/24**  | Final Exam (online) 4:00 PM - 6:00 PM                                      | .                                         | .                                                                                                                                                                                                                               |                                                                                                                                                                                                                                                                                                                                                                              |
 
