--- a/lecture_slides/15_lesson_m3dm/communicating_effectively.qmd
+++ b/lecture_slides/15_lesson_m3dm/communicating_effectively.qmd
@@ -1,8 +1,8 @@
 ---
-title: "<span style = 'font-size: 100%;'> MGMT 17300: Data Mining Lab </span>"
-subtitle: "<span style = 'font-size: 150%;'>Bringing It All Together: From Data to Insights to Decisions</span>"
+title: "<span style = 'font-size: 100%;'> Communicating Data Effectively </span>"
+subtitle: "<span style = 'font-size: 150%;'>Transforming Insights into Purposeful Data Storytelling</span>"
 author: "Professor: Davi Moreira"
-date: "2024-08-01"
+date: ""
 date-format: "MMMM DD, YYYY"
 format:
   revealjs: 
@@ -17,7 +17,7 @@ format:
       buttons: false
     preview-links: auto
     #logo: figs/quarto.png
-    footer: "Data Mining Lab"
+    footer: ""
     theme: [simple,custom.scss]
 ---
 
@@ -35,9 +35,11 @@ format:
 -   Choosing the Chart
 
 -   Less is More
+
 :::
 
 ::: {.column width="50%" style="text-align: center; justify-content: center; align-items: center;"}
+
 -   Hierarchy Among Data
 
 -   Not All Data Are Equally Important
@@ -96,8 +98,10 @@ Every analysis has a goal and an audience.
 
 -   *So what?* Keep a specific learning objective in mind. It will guide which information is relevant for your report.
 
-::: fragment
+:::{.fragment}
+
 Isolated numbers don't tell us much. To make evidence-based decisions, it's necessary to establish an appropriate **basis for comparison** for the goal of your report.
+
 :::
 
 ## Context Can Come from New Information...
@@ -186,18 +190,20 @@ Isolated numbers don't tell us much. To make evidence-based decisions, it's nece
 
 <br>
 
--   The more information in your visualization, the greater the cognitive load.
+- The more information in your visualization, the greater the cognitive load. 
 
--   **Your objective** must be to reduce your audience cognitive costs.
+- **Your objective** must be to reduce your audience cognitive costs.
 
 <br>
 
-::: fragment
+:::{.fragment}
+
 **Data-Ink Ratio Formula**
 
 $$
 \text{Data-Ink Ratio} = \frac{\text{Data-Ink}}{\text{Total ink used to print the graphic}}
 $$
+
 :::
 
 ## Data-Ink Ratio
@@ -362,25 +368,33 @@ $$
 
 ## Emphasizing the Main Point
 
-:::::: columns
+:::: {.columns}
 ::: {.column width="50%"}
+
 <center>
 
 ![Emphasis 2](figs/enfase-2.png){width="90%"}
 
 </center>
+
+
 :::
 
-:::: {.column width="50%"}
-::: fragment
+::: {.column width="50%"}
+
+:::{.fragment}
+
 <center>
 
 ![Emphasis 3](figs/enfase-3.png){width="90%"}
 
 </center>
+
+:::
+
 :::
 ::::
-::::::
+
 
 # Telling Your Story {background-color="#cfb991"}
 
@@ -614,7 +628,7 @@ nytexcess %>%
 -   [The Functional Art](http://www.thefunctionalart.com/)
 -   [COVID in the Financial Times](https://www.ft.com/content/a2901ce8-5eb7-4633-b89c-cbdf5b386938)
 
-# Dashboards {background-color="#cfb991"}
+# Dashboards  {background-color="#cfb991"}
 
 ## Dashboards
 
@@ -648,87 +662,107 @@ install.packages("flexdashboard")
 knitr::include_graphics("figs/flexdashboard_template.png") 
 ```
 
+
 </center>
 
 ## Flexdashboard: Layout
 
-::::: columns
+:::: {.columns}
 ::: {.column width="60%"}
+
 <br>
 
 ```{r  echo=FALSE, out.width = "80%",fig.align="center"}
 knitr::include_graphics("figs/flexdashboard_layout_01.png") 
 ```
-:::
 
+
+:::
 ::: {.column width="40%"}
+
 <br>
 
--   Dashboards are divided into columns and rows, with output components delineated using level 3 `markdown` headers (`###`).
+- Dashboards are divided into columns and rows, with output components delineated using level 3 `markdown` headers (`###`). 
 
--   By default, dashboards are laid out in a single column, with charts stacked vertically and sized to fill the available height of the browser.
+- By default, dashboards are laid out in a single column, with charts stacked vertically and sized to fill the available height of the browser.
+
 :::
-:::::
+::::
 
 ## Flexdashboard: Layout
 
-::::: columns
+:::: {.columns}
 ::: {.column width="60%"}
+
 <br>
 
 ```{r  echo=FALSE, out.width = "80%",fig.align="center"}
 knitr::include_graphics("figs/flexdashboard_layout_02.png") 
 ```
-:::
 
+
+:::
 ::: {.column width="40%"}
+
 <br>
 
--   Depending on the nature of your dashboard (number of components, ideal component height, etc.), you might prefer a scrolling layout where components occupy their natural height and the browser scrolls when additional vertical space is needed.
+- Depending on the nature of your dashboard (number of components, ideal component height, etc.), you might prefer a scrolling layout where components occupy their natural height and the browser scrolls when additional vertical space is needed. 
 
--   You can specify this attribute via the `vertical_layout: scroll` option.
+- You can specify this attribute via the `vertical_layout: scroll` option.
+
 :::
-:::::
+::::
+
 
 ## Flexdashboard: Layout
 
-::::: columns
+
+:::: {.columns}
 ::: {.column width="60%"}
+
 <br>
 
 ```{r  echo=FALSE, out.width = "80%",fig.align="center"}
 knitr::include_graphics("figs/flexdashboard_layout_03.png") 
 ```
-:::
 
+
+:::
 ::: {.column width="40%"}
+
 <br>
 
--   You can also choose to orient the dashboards by row instead of by column by specifying `orientation: rows`.
+- You can also choose to orient the dashboards by row instead of by column by specifying `orientation: rows`.
+
 :::
-:::::
+::::
 
 ## Flexdashboard: Storyboard
 
-::::: columns
+
+:::: {.columns}
 ::: {.column width="60%"}
+
 <br>
 
 ```{r  echo=FALSE, out.width = "80%",fig.align="center"}
 knitr::include_graphics("figs/storyboard_template.png") 
 ```
-:::
 
+
+:::
 ::: {.column width="40%"}
+
 <br>
 
--   Storyboards are an alternative to the row and column-based layout schemes.
+- Storyboards are an alternative to the row and column-based layout schemes. 
 
--   They are suitable for presenting a sequence of data visualizations and related commentary.
+- They are suitable for presenting a sequence of data visualizations and related commentary. 
 
--   To create a storyboard layout, add `storyboard: true` to the dashboard's preamble. This option includes a set of level 3 dashboard components (`###`). Each component will receive its own frame in the storyboard, with the section title used as a navigation caption.
+- To create a storyboard layout, add `storyboard: true` to the dashboard's preamble. This option includes a set of level 3 dashboard components (`###`). Each component will receive its own frame in the storyboard, with the section title used as a navigation caption.
+
 :::
-:::::
+::::
 
 ## Dashboard: Additional Material
 
@@ -750,30 +784,32 @@ knitr::include_graphics("figs/storyboard_template.png")
 
 :::: nonincremental
 ::: {style="font-size: 80%;"}
+
 Main Takeaways from this lecture:
 
--   **Data Communication Principles**:
+- **Data Communication Principles**:
 
-    -   Context matters: Tailor your analysis to the audience and goal.
-    -   Focus on the story: Highlight insights, not the process.
-    -   Beauty and clarity: Simplify visuals, use appropriate colors, and remove unnecessary elements.
+    - Context matters: Tailor your analysis to the audience and goal.
+    - Focus on the story: Highlight insights, not the process.
+    - Beauty and clarity: Simplify visuals, use appropriate colors, and remove unnecessary elements.
 
--   **Visualization Best Practices**:
+- **Visualization Best Practices**:
 
-    -   Use graphs instead of tables where possible.
-    -   Avoid misleading scales and excessive dimensions.
-    -   Prioritize hierarchy and emphasize key data points.
+    - Use graphs instead of tables where possible.
+    - Avoid misleading scales and excessive dimensions.
+    - Prioritize hierarchy and emphasize key data points.
 
--   **Effective Dashboards**:
+- **Effective Dashboards**:
+  
+    - Utilize tools like `flexdashboard` to create interactive layouts.
+    - Structure information logically, adapting to mobile and web use.
+    - Storyboard layouts help narrate data insights step-by-step.
 
-    -   Utilize tools like `flexdashboard` to create interactive layouts.
-    -   Structure information logically, adapting to mobile and web use.
-    -   Storyboard layouts help narrate data insights step-by-step.
+- **Final Message**:
 
--   **Final Message**:
+    - Less is more. Reduce complexity to communicate data effectively.
+    - Always keep your audience's decision-making needs at the forefront.
 
-    -   Less is more. Reduce complexity to communicate data effectively.
-    -   Always keep your audience's decision-making needs at the forefront.
 :::
 ::::
 
